--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build_job:
 
     runs-on: ubuntu-latest
 
@@ -27,5 +27,14 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Builds
+      run: node index.js
+  run_job:
+    needs: build_job
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x]
+    steps:
+    - name: Run
       run: node index.js
       
