--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,8 +26,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
       run: npm ci
-    - name: Builds
-      run: node index.js
   run_job:
     needs: build_job
     runs-on: ubuntu-latest
@@ -35,6 +33,7 @@ jobs:
       matrix:
         node-version: [12.x]
     steps:
+    - uses: actions/checkout@master
     - name: Run
       run: node index.js
       
